@@ -1,4 +1,5 @@
 DIST upkern-2.0.5.tar.bz2 8732 RMD160 39d3be013373386501f7876042bd0908076f647c SHA1 6fb4aee209aeebf02e909210a9d5e18dc8e8bc0d SHA256 dcbb61ca8f1efa135b9c00bbe4860256afceea9d5ea1f782cfcbcabdb6423474
+DIST upkern-2.0.6.tar.bz2 8854 RMD160 8cfe309cd699df618489ec603bbe8191737a8460 SHA1 487603f2a2bd27900ff060ba1f92c2016c8a6c22 SHA256 26a73e326bafd8731cce7773d8d14fd8577270e9f6b36d8b37e8e73a2d97c8aa
 EBUILD upkern-2.0.5.ebuild 671 RMD160 590b864814a6e6f96190453fec2c292c5a030f8b SHA1 40d93d2e6f30c6fcaa5d4122d21fcac3c98dae93 SHA256 5d1b8a81be5505452fd51d5564b2c5805dfe9ccee8b8e4124ba7b4d7d110f94e
-MISC ChangeLog 292 RMD160 d68aaaf97022f0b777d4d770283a09755078c70d SHA1 18616c7c40e9037c793c06dbd81bc671654dc77d SHA256 ac2bac82892f9ac7a9f24a2efc8629b26a433d073f6c0d30088581bd02d3589b
-MISC upkern-2.0.5.ebuild~ 664 RMD160 087e1ba6df4d0862983170b7b92de247884da5f9 SHA1 2d94bdc14f3523330021551a62dae654016fa401 SHA256 6c8f1689177fe3a8a5ddca9199380dba9330b507dc728c02241bc3b616968c82
+EBUILD upkern-2.0.6.ebuild 711 RMD160 d8adffc4f7603f4516e8dc9bd9104b6076413f85 SHA1 b2c9d120ab9cf2fc094401dfae4a7ca68c2d9f76 SHA256 de5b3c9181a951db9be25c488fc3268935bd11cb2f82ed5368b611d751ab12bf
+MISC ChangeLog 384 RMD160 16d4ee7c7c268c42eb430c05087783ad1e04d655 SHA1 f2612e9e4cfc8ac02038554eb8e7890e428db43d SHA256 2a14efd27fa4007489f05f7101954144b0eb78f108b2c460d7941e52928bfc13
