@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $
 
+  16 Jun 2008: John Harris <harrisj@mnstate.edu>
+    Created new ebuild for version 2.0.6.
+
   13 Jun 2008: Alex Brandt <alunduil@alunduil.com>
     Initial ebuild for upkern.
 
